add members view

--- a/web/locales/en-US/components.json
+++ b/web/locales/en-US/components.json
@@ -4,7 +4,11 @@
   },
   "navbar": {
     "section": {
-      "guilds": "Guilds"
+      "guilds": {
+        "title": "Guilds",
+        "home": "Home",
+        "members": "Members"
+      }
     }
   }
 }
