--- a/web/locales/en-US/routes.member.json
+++ b/web/locales/en-US/routes.member.json
@@ -1,5 +1,6 @@
 {
   "isbot": "This member is a Bot.",
+  "isyou": "Hey, this is you! 👀",
   "info": {
     "heading": "General User Information",
     "guild-joined": "Joined Guild",
