add member reports list

--- a/web/locales/en-US/components.json
+++ b/web/locales/en-US/components.json
@@ -13,5 +13,9 @@
   },
   "sincedate": {
     "since": "<1>{{dateSince}}</1> ago"
+  },
+  "report": {
+    "reason": "Reason",
+    "revoke": "Revoke"
   }
 }
