add report revoking

--- a/web/public/locales/en-US/routes.member.json
+++ b/web/public/locales/en-US/routes.member.json
@@ -16,5 +16,11 @@
   },
   "reports": {
     "heading": "Reports"
+  },
+  "notifications": {
+    "reportrevoked": {
+      "heading": "Report Revoked",
+      "message": "Report has been revoked successfully."
+    }
   }
 }
