--- a/web/public/locales/en-US/components.json
+++ b/web/public/locales/en-US/components.json
@@ -17,5 +17,19 @@
   "report": {
     "reason": "Reason",
     "revoke": "Revoke"
+  },
+  "modalrevokereport": {
+    "heading": "Revoke Report",
+    "description": {
+      "kick": "Please enter a reason to revoke this kick report.",
+      "ban": "Please enter a reason to revoke this ban report. This will also unban the user from the guild.",
+      "mute": "Please enter a reason to revoke this mute report. This will also unmute the member.",
+      "warn": "Please enter a reason to revoke this report.",
+      "ad": "Please enter a reason to revoke this report."
+    },
+    "controls": {
+      "cancel": "Cancel",
+      "revoke": "Revoke"
+    }
   }
 }
