fix english texts

--- a/web.new/public/locales/en-US/routes.member.json
+++ b/web.new/public/locales/en-US/routes.member.json
@@ -1,5 +1,5 @@
 {
-  "isbot": "This member is a Bot.",
+  "isbot": "This member is a bot account.",
   "isyou": "Hey, this is you! 👀",
   "info": {
     "heading": "General User Information",
