--- a/web.new/public/locales/de/routes.member.json
+++ b/web.new/public/locales/de/routes.member.json
@@ -14,6 +14,13 @@
   "permissions": {
     "heading": "Berechtigungen"
   },
+  "moderation": {
+    "heading": "Moderation",
+    "report": "Report",
+    "kick": "Kick",
+    "ban": "Ban",
+    "mute": "Chat Mute (Timeout)"
+  },
   "reports": {
     "heading": "Meldungen"
   },
