add info text and pasting files from clipboard

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -61,5 +61,8 @@
     "hours": "Hours",
     "minutes": "Minutes",
     "seconds": "Seconds"
+  },
+  "filedrop": {
+    "info": "Open a file by clicking or ba drag and drop. You can even simply paste from your clipboard as well!"
   }
 }
