--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -52,7 +52,7 @@
       "execute": "Execute {{action}}"
     },
     "errors": {
-      "attachment-convert-failed": "Failed converting attachmeht to Base64"
+      "attachment-convert-failed": "Failed converting attachmeht to Base64."
     },
     "successful": "Report action has been executed successfully."
   },
@@ -63,6 +63,6 @@
     "seconds": "Seconds"
   },
   "filedrop": {
-    "info": "Open a file by clicking or ba drag and drop. You can even simply paste from your clipboard as well!"
+    "info": "Open a file by clicking or via drag and drop. You can even simply paste from your clipboard as well!"
   }
 }
