--- a/web.new/public/locales/en-US/translation.json
+++ b/web.new/public/locales/en-US/translation.json
@@ -1,8 +1,8 @@
 {
   "errors": {
     "reports": {
-      "disallowed-attachment-type": "This file type is not allowed.",
-      "file-too-big": "This file is too large."
+      "disallowed-attachment-type": "Dieser Dateityp ist nicht erlaubt.",
+      "file-too-big": "Diese Datei ist zu groß."
     }
   }
 }
