re-style navbar

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -5,7 +5,7 @@
   "navbar": {
     "section": {
       "guilds": {
-        "title": "Guilds",
+        "title": "Guild",
         "home": "Home",
         "members": "Members"
       }
