--- a/web.new/public/locales/de/routes.guildmodlog.json
+++ b/web.new/public/locales/de/routes.guildmodlog.json
@@ -1,3 +1,5 @@
 {
+  "reports": "Meldungen",
+  "unbanrequests": "Entbannungsanträge",
   "noreports": "Yay, deine Guild hat aktuell keine Meldungen! 🥳"
 }
