--- a/web.new/public/locales/en-US/routes.guildmodlog.json
+++ b/web.new/public/locales/en-US/routes.guildmodlog.json
@@ -1,5 +1,6 @@
 {
   "reports": "Reports",
   "unbanrequests": "Unban Requests",
-  "noreports": "Yay, your guild has no reports! 🥳"
+  "noreports": "Yay, your guild has no reports! 🥳",
+  "nounbanrequests": "There are no unban requests yet."
 }
