--- a/web.new/public/locales/de/routes.guildmodlog.json
+++ b/web.new/public/locales/de/routes.guildmodlog.json
@@ -1,5 +1,6 @@
 {
   "reports": "Meldungen",
   "unbanrequests": "Entbannungsanträge",
-  "noreports": "Yay, deine Guild hat aktuell keine Meldungen! 🥳"
+  "noreports": "Yay, deine Guild hat aktuell keine Meldungen! 🥳",
+  "nounbanrequests": "Es wurden bis jetzt keien Entbannungsanträge eingereicht."
 }
