--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -8,6 +8,11 @@
         "title": "Guild",
         "members": "Members",
         "modlog": "Modlog"
+      },
+      "guildsettings": {
+        "title": "Guild Settings",
+        "general": "General",
+        "backup": "Backups"
       }
     },
     "logout": "Logout",
