add antiraid route - totally unfinished but yolo

--- a/web.new/public/locales/de/components.json
+++ b/web.new/public/locales/de/components.json
@@ -12,7 +12,8 @@
       "guildsettings": {
         "title": "Guild Einstellungen",
         "general": "General",
-        "backup": "Backups"
+        "backup": "Backups",
+        "antiraid": "Antiraid"
       }
     },
     "logout": "Logout",
