--- a/web.new/public/locales/en-US/routes.guildsettings.general.json
+++ b/web.new/public/locales/en-US/routes.guildsettings.general.json
@@ -2,6 +2,8 @@
   "reset": "Reset",
   "save": "Save Settings",
 
+  "heading": "General Guild Settings",
+
   "notifications": {
     "saved": "Settings saved."
   },
