--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -13,7 +13,8 @@
         "title": "Guild Settings",
         "general": "General",
         "backup": "Backups",
-        "antiraid": "Antiraid"
+        "antiraid": "Antiraid",
+        "codeexec": "Code Execution"
       }
     },
     "logout": "Logout",
