--- a/web.new/public/locales/en-US/routes.guildsettings.codeexec.json
+++ b/web.new/public/locales/en-US/routes.guildsettings.codeexec.json
@@ -1,6 +1,6 @@
 {
   "heading": "Code Execution",
-  "explaination": "Lorem ipsum",
+  "explanation": "Lorem ipsum",
   "enable": "Enable code execution",
   "save": "Save settings",
 
@@ -10,13 +10,13 @@
 
   "jdoodle": {
     "heading": "JDoodle Settings",
-    "explaination": "shinpuru is globally configured to use <1>JDoodle</1> as code execution engine. Because of that, credentials are provided on a per guild basis so that you can use your own plan for your guild. <2>Here</2> you can acquire your JDoodle API credentials. ",
+    "explanation": "shinpuru is globally configured to use <1>JDoodle</1> as code execution engine. Because of that, credentials are provided on a per guild basis so that you can use your own plan for your guild. <2>Here</2> you can acquire your JDoodle API credentials. ",
     "settingswarn": "Code execution is stil disabled until JDoodle credentials are provided.",
     "clientid": "Client ID",
     "clientsecret": "Client Secret"
   },
 
   "ranna": {
-    "explaination": "shinpuru is globally configured to use <1>ranna</1> as code execution engine. So nothing further has to be configured. 🥳"
+    "explanation": "shinpuru is globally configured to use <1>ranna</1> as code execution engine. So nothing further has to be configured. 🥳"
   }
 }
