add permissions route

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -12,6 +12,7 @@
       "guildsettings": {
         "title": "Guild Settings",
         "general": "General",
+        "permissions": "Permissions",
         "backup": "Backups",
         "antiraid": "Antiraid",
         "codeexec": "Code Execution",
