fix autocomplete input

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -141,5 +141,8 @@
       "sendmessage": "send message"
     },
     "apply": "Apply rule"
+  },
+  "permissionselector": {
+    "apply": "Apply"
   }
 }
