add role select for perms

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -143,6 +143,7 @@
     "apply": "Apply rule"
   },
   "permissionselector": {
-    "apply": "Apply"
+    "apply": "Apply",
+    "placeholder": "sp.guild.mod.*"
   }
 }
