add placeholder for role names

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -144,6 +144,9 @@
   },
   "permissionselector": {
     "apply": "Apply",
-    "placeholder": "sp.guild.mod.*"
+    "placeholder": {
+      "roles": "Roles",
+      "perms": "sp.guild.mod.*"
+    }
   }
 }
