add invite link blocking route

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -15,6 +15,7 @@
         "permissions": "Permissions",
         "backup": "Backups",
         "antiraid": "Antiraid",
+        "linkblocking": "Link Blocking",
         "codeexec": "Code Execution",
         "verification": "Verification",
         "karma": "Karma",
