--- a/web.new/public/locales/en-US/routes.guildsettings.linkblocking.json
+++ b/web.new/public/locales/en-US/routes.guildsettings.linkblocking.json
@@ -2,5 +2,8 @@
   "heading": "Link Blocking",
   "explanation": "Delete messages in chats which contain disallowed links. Currently, this implementation only allowes blocking of invite links to other guilds.",
   "toggle": "Enable invite link blocking",
-  "save": "Save settings"
+  "save": "Save settings",
+  "notifications": {
+    "saved": "Settings have been saved."
+  }
 }
