add OTA usersettings route

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -31,7 +31,9 @@
     "back": "Back to Dashboard",
     "section": {
       "default": {
-        "apitoken": "API Token"
+        "apitoken": "API Token",
+        "ota": "OTA",
+        "privacy": "Privary"
       }
     }
   },
