add privacy usersettings route

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -33,7 +33,7 @@
       "default": {
         "apitoken": "API Token",
         "ota": "OTA",
-        "privacy": "Privary"
+        "privacy": "Privacy"
       }
     }
   },
