load reports and unban requests paged

--- a/web.new/public/locales/en-US/routes.guildmodlog.json
+++ b/web.new/public/locales/en-US/routes.guildmodlog.json
@@ -2,5 +2,6 @@
   "reports": "Reports",
   "unbanrequests": "Unban Requests",
   "noreports": "Yay, your guild has no reports! 🥳",
-  "nounbanrequests": "There are no unban requests yet."
+  "nounbanrequests": "There are no unban requests yet.",
+  "loadmore": "Load more ..."
 }
