add starboard route

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -7,6 +7,8 @@
       "guilds": {
         "title": "Guild",
         "members": "Members",
+        "starboard": "Starboard",
+        "karma": "Karma",
         "modlog": "Modlog"
       },
       "guildsettings": {
