add karma scoreboard route

--- a/web.new/public/locales/en-US/routes.guildkarma.json
+++ b/web.new/public/locales/en-US/routes.guildkarma.json
@@ -1,1 +1,3 @@
-{}
+{
+  "empty": "Hm, nothing's going on here ...<br />Did you already set up the karma system? If not, go to the <1>Karma Guild Settings</1> to do so."
+}
