add language route

--- a/web.new/public/locales/en-US/components.json
+++ b/web.new/public/locales/en-US/components.json
@@ -36,7 +36,8 @@
       "default": {
         "apitoken": "API Token",
         "ota": "OTA",
-        "privacy": "Privacy"
+        "privacy": "Privacy",
+        "language": "Language"
       }
     }
   },
